--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "styled-components": "^5.3.9",
     "styled-reset": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
